# PagJosi

./: Cargo.toml
src/: main.rs
umya-spreadsheet/: CHANGELOG.md  Cargo.toml  Cargo.toml.orig  README.md  USS.code-workspace
umya-spreadsheet/src/: lib.rs  structs.rs  traits.rs
umya-spreadsheet/src/helper/: address.rs  binary.rs  color.rs  const_str.rs  coordinate.rs  crypt.rs  date.rs  formula.rs  html.rs  number_format.rs  range.rs  string_helper.rs  utils.rs
umya-spreadsheet/src/helper/number_format/: date_formater.rs  fraction_formater.rs  number_formater.rs  percentage_formater.rs
umya-spreadsheet/src/reader/: driver.rs  xlsx.rs
umya-spreadsheet/src/reader/xlsx/: chart.rs  comment.rs  content_types.rs  drawing.rs  (+15 more)
umya-spreadsheet/src/structs/: address.rs  alignment.rs  anchor.rs  auto_filter.rs  bold.rs  boolean_value.rs  border.rs  border_properties_type.rs  border_style_values.rs  borders.rs  borders_crate.rs  break.rs  byte_value.rs  cache_field.rs  cache_fields.rs  cache_source.rs  cell.rs  cell_format.rs  cell_formats.rs  cell_formula.rs  cell_formula_values.rs  cell_raw_value.rs  cell_style.rs  cell_style_formats.rs  cell_styles.rs  cell_value.rs  cells.rs  chart.rs  chart_type.rs  color.rs  color_scale.rs  colors.rs  column.rs  column_breaks.rs  column_fields.rs  column_items.rs  column_reference.rs  columns.rs  comment.rs  comment_text.rs  (+129 more)
umya-spreadsheet/src/traits/: adjustment_coordinate.rs  adjustment_coordinate_with_2sheet.rs  adjustment_coordinate_with_sheet.rs  adjustment_value.rs
umya-spreadsheet/src/writer/: csv.rs  driver.rs  xlsx.rs
(+335 files in other folders)
